<resources>
    <string name="app_name">kalkulator</string>
    <string name="tall1" translatable="false">Tall 1</string>
    <string name="tall2">Tall 2</string>
    <string name="pluss" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="dele" translatable="false">/</string>
    <string name="gange" translatable="false">*</string>
    <string name="resultat" translatable="false">Resultat</string>
    <string name="slette" translatable="false">Reset</string>
</resources>